--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,11 @@ services:
       - 80:80
     depends_on:
       - mariadb
-
+    environment: 
+      - DB_HOST=mariadb
+      - DB_NAME=${MARIADB_DATABASE}
+      - DB_USER=${MARIADB_USER}
+      - DB_PASSWORD=${MARIADB_PASSWORD}
   mariadb:
     image: mariadb
     ports:
